--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>Test</h1>
-       <?php  echo "ddd" ?>
+       <?php echo "My first PHP script!";?>
         <script src="" async defer></script>
     </body>
 </html>
